[workspace]

members = [
    "nes",
    "heart_man",
    "brickgame",
]

[profile.dev]
opt-level = "s"
lto = true
debug = true
debug-assertions = false
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
